# security-cam

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  alg_image_detect.cpp  detection_pipeline.cpp  detection_pipeline.h  main.cpp  mobilenet_v2_inference.cpp  mobilenet_v2_inference.h  rest_api_server.cpp  rest_api_server.h  sqlite_database.cpp  sqlite_database.h  webstream_server.cpp  webstream_server.h  yolov7.cpp  yolov7.h  yolov8.cpp  yolov8.h
archive/com.example.StreamManagerS3Upload/: gdk-config.json.template  issue-local-deployment.sh  issue-manual-deployment.sh  main.py
archive/com.example.StreamManagerS3Upload/archive/: recipe.json.template
archive/com.example.StreamManagerS3Upload/aws-deployment-templates/: gdk-config.json.template  recipe.json.template
archive/com.example.StreamManagerS3Upload/zip-build/com.example.StreamManagerS3Upload/aws-deployment-templates/: recipe.json.template
archive/com.example.publisttest/: build-custom.sh  issue-manual-deployment.sh
archive/com.example.publisttest/aws-deployment-templates/: recipe.json.template
archive/com.example.publisttest/src/: CMakeLists.txt  basic_pub.cc  pub_sub.cc  publish.cc
archive/pubsubpython/: recipe.yaml
com.example.BatteryAwareHelloWorld/: database.py  deployment.json  gdk-config.json
com.example.BatteryAwareHelloWorld/archive/: gdk-config.json  recipe.json
com.example.BatteryAwareHelloWorld/aws-deployment-templates/: gdk-config.json.template
com.example.BatteryAwareHelloWorld/greengrass-build/recipes/: recipe.json
com.example.BatteryAwareHelloWorld/zip-build/com.example.BatteryAwareHelloWorld/: issue-manual-deployment.sh  main.py
com.example.BatteryAwareHelloWorld/zip-build/com.example.BatteryAwareHelloWorld/aws-deployment-templates/: deployment.json.template
com.example.DeferDeployment/: issue-local-deployment.sh  issue-manual-deployment.sh
com.example.DeferDeployment/aws-deployment-templates/: deployment.json.template  gdk-config.json.template  recipe-local.json.template  recipe.json.template
com.example.DeferDeployment/src/: CMakeLists.txt  main.cc
com.example.DeferDeployment/src/awsiot/: component_update_handler.cc  component_update_handler.h  junk.cpp  lifecycle_handler.cc  lifecycle_handler.h  mqtt_handler.cc  mqtt_handler.h
com.example.StreamManagerS3Upload/: issue-manual-deployment.sh  main.py
com.example.StreamManagerS3Upload/aws-deployment-templates/: deployment.json.template  recipe.json.template
com.example.publisttest/aws-deployment-templates/: recipe-local.json.template
com.example.pubsubtest/: build-custom.sh  deployment.json  gdk-config.json  issue-local-deployment.sh  issue-manual-deployment.sh  recipe.json
com.example.pubsubtest/aws-deployment-templates/: deployment.json.template  recipe.json.template
com.example.pubsubtest/greengrass-build/recipes/: com.example.pubsubtest-0.0.1.json  com.example.pubsubtest-0.0.2.json  com.example.pubsubtest-0.0.3.json  recipe.json
com.example.pubsubtest/src/: CMakeLists.txt  main copy.cc  main.cc
com.example.shadowtest/: issue-local-deployment.sh  issue-manual-deployment.sh
com.example.shadowtest/aws-deployment-templates/: deployment.json.template  recipe.json.template
com.example.shadowtest/src/: main.cc
com.synapseautomota.SecurityCamera/archive/: issue-local-deployment copy.sh
com.synapseautomota.SecurityCamera/src/: CMakeLists.txt  IpcClientLifecycleHandler.h  IpcClientPublisher.cpp  IpcClientPublisher.h  Logger.h  OpenCVUtils.cpp  OpenCVUtils.h  SubscribeResponseHandler.h  SubscribeUpdatesHandler.cpp  SubscribeUpdatesHandler.h  inference_rknn.cpp  inference_rknn.h  main.cc
doc/: building-with-docker.md
examples/: CMakeLists.txt
examples/annotate-video/: CMakeLists.txt  yolov7.cpp
examples/can/: CMakeLists.txt  main.cc
examples/coral_ai/: CMakeLists.txt  classify.cc  lstpu.cc  minimal.cc
examples/mobilenet-inference/: CMakeLists.txt  main.cpp
examples/mqtt/: CMakeLists.txt  main.cc
examples/rk3399/: alg_standalone.cpp
examples/shadow/: shadow_handler.cc
gg/recipes/: com.example.HelloWorld-1.0.0.yaml
pubsubpython/: gdk-config.json
scripts/: build-custom.sh  convert-yolov7.sh  download_yolo_v8.sh  init-build-machine.sh  init_build_machine.sh  install-onnx-runtime.sh  install_aws_sdk.sh  issue-local-deployment.sh  issue-manual-deployment.sh
scripts/cmake/: aws-iot-device-sdk-cpp-v2.cmake  aws-sdk-cpp.cmake  aws-sdk.cmake  can-utils.cmake  coral-ai.cmake  coral-edge-tpu.cmake  coral-flat-buffers.cmake  coral-tensorflow-lite.cmake  crypto.cmake  curl.cmake  libusb.cmake  opencv.cmake  rk3399-pro-npu.cmake  sqlite.cmake  zlib.cmake
scripts/cmake/patches/: aws-sdk-crt-variant.patch
scripts/ultralytics/: convert-edge-tpu.py  convert.py  create-env.sh  run_model.py
src/: CMakeLists.txt  Logger.cpp  SubscribeResponseHandler.cpp  camera-handler.cc  camera-handler.h  fifo_queue.h  logger.cc  logger.h  main.cc  web-streamer.cc  web-streamer.h
src/alg/: fifo-queue.cc  fifo-queue.h  fifo_queue.cpp  inference-coral.cc  inference-coral.h  inference_rknn.cpp
src/awsiot/: IpcClientLifecycleHandler.cpp  IpcClientLifecycleHandler.h  IpcClientPublisher.h  SubscribeResponseHandler.h  SubscribeUpdatesHandler.cpp  SubscribeUpdatesHandler.h  mqtt_handler.cpp
